istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gitops-gateway
  namespace: istio-system
spec:
  template:
    spec:
      nodeSelector:
        karpenter.sh/nodepool: ondemand
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS     
    hosts:
    - apps.pocarqnube.com
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - apps.pocarqnube.com
