istio/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: single-gitops-vs
  namespace: istio-system
spec:
  gateways:
  - istio-system/gitops-gateway
  hosts:
  - apps.pocarqnube.com
  http:
  # Backstage - con configuración corregida
  - match:
    - uri:
        prefix: /backstage
    rewrite:
      uri: /
    route:
    - destination:
        host: backstage.backstage.svc.cluster.local
        port:
          number: 7007
  
  # ArgoCD - puerto corregido y sin rewrite problemático
  - match:
    - uri:
        prefix: /argocd
    rewrite:
      uri: /    
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80 
  - match:
    - uri:
        prefix: /mockserver
    rewrite:
      uri:  
    route:
    - destination:
        host: mocksserver.prueba-envoy.svc.cluster.local  # Nombre completo del Service de mocksserver
        port:
          number: 3100
  
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: routes-lister-service.default.svc.cluster.local  # Tu servicio por defecto        
        port:
          number: 80
